# cavity-design

./: .gitignore  CLAUDE.md  Cavity details.xlsx  Gaussians.nb  MK_variations.xlsx  README.md  Solve intersections equations.nb  abcd_matrices_propagation_validation.py  aberrations_ray_tracing.py  aspheric_lens_generator.py  cavity.py  cavity_2d.py  cavity_2d.txt  cavity_jupyter_lab.bat  characterize-one-cavity-playground.py  convert_mathematica_to_python.py  correct_small_elements_with_big_mirror.py  delete_me.py  gaussian_beam_simulation_to_verify_my_simulation.xml  gaussian_integral_validation.py  get_file_permalink.bat  hessian analysis temp.py  iterate_and_record_cavity_variations.py  multiple_central_lines_analysis.py  playground.ipynb  playground.py  playground_2.py  playground_3d.ipynb  playground_wavefronts_temp.py  pyproject.toml  requirements.txt  sainity_check_without_normalization.py  utils.py
.claude/: settings.local.json
SolidWorks/: Assem2.SLDASM  Lidans simulation for thermal effects on mirror.SLDPRT  Mirror_MK_steadystate.SLDPRT  Part5.SLDPRT  custom_lens.SLDPRT  custom_mirror_10mm_f.SLDPRT  custom_mirror_15cm_f.SLDPRT  lens_15mm.sldprt  lens_mount_12.7mm.sldprt  mirror_12mm_f_cut.sldprt  mirror_15cm_f.sldprt  mirror_mount_25mm.sldprt  optical_table.sldprt  three_elements_cavity_custom_elements.SLDASM  three_elements_cavity_custom_elements_tube.SLDASM  three_elements_cavity_thorlabs_elements.SLDASM
cavity/: _cavity.py  _modes.py  _rays.py  _surfaces.py
cavity_design/: __init__.py  _cavity.py  _existing_elements.py  _modes.py  _potential.py  _rays.py  (+2 more)
(+160 files in other folders)
